[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/messages/typing_indicator.gd" id="1"]

[node name="TypingIndicator" type="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 24)
offset_right = 300.0
offset_bottom = 24.0
theme_override_constants/separation = 4
script = ExtResource("1")

[node name="Dots" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 3

[node name="Dot1" type="Label" parent="Dots"]
layout_mode = 2
text = "."

[node name="Dot2" type="Label" parent="Dots"]
layout_mode = 2
text = "."

[node name="Dot3" type="Label" parent="Dots"]
layout_mode = 2
text = "."

[node name="Text" type="Label" parent="."]
layout_mode = 2
text = "Someone is typing..."
